@@ -2,6 +2,8 @@ Revision history for Overload-FileCheck
 
 {{$NEXT}}
 
+fallback to Perl OP when filecheck is called with _ or *_ (use statcache)
+
 0.005     2018-10-25 12:58:55-05:00 America/Chicago
 
 improve POD and Markdown documentation
